2007-10-25  Sanel <karijes@users.sourceforge.net>

	* In XSettingsManager after set(), notify() must be called. This will
	(on initial startup) keep serials to zero which is compatible with
	XSETTINGS referent implementation
	* The same done for XSettingsClient
	* Window class added

2007-10-24  Sanel <karijes@users.sourceforge.net>

	* Documented XSettingsClient
	* Copy ctor and operator= are private in XSettingsClient
	* setup_driver() guarded with USE_SOUNDS
	* XSettingsManager added with documentation
	* XSettingsClient now explicitly accepts Display/screen variables

2007-10-23  Sanel <karijes@users.sourceforge.net>

	* xsettings_list_find in XSettingsCommon.h should accept XSettingsList*
	not XSettingsList**. Compiler missed this !@#$
	* Added xsettings.cpp file with tests

2007-10-22  Sanel <karijes@users.sourceforge.net>

	* Added XSETTINGS classes. Manager part missing
	* Added xsettings_setter.c, xsettings_client.c in examples

2007-09-23  Sanel <karijes@users.sourceforge.net>

	* list have front()/back()
	* Tests added too
	* Removed old commented code from MimeType
	* svg2png can detect either rsvg or inkscape if are installed and use one
	of them
	* Added key_exist() in Config
	* exist() and key_exist() tests in config.cpp
	* Added getting/setting OnlyShowIn/NotShowIn values in DesktopFile
	* Detail tests for DesktopFile file class including above addition
	* Removed few finished entries from TODO

2007-09-17  Sanel <karijes@users.sourceforge.net>

	* sound.m4, disable checks for mad library
	* Uh... finally fixed odd bug in MessageBox caused due non-resizable group 
	where readqueue() would miss any event produced by child that was laying
	outside group bounds (the odd thing was for childs that was partially
	laying outsid group; part of the child inside group bounds would report
	event, but part of the same child outside those bounds would not ;P)

2007-09-16  Sanel <karijes@users.sourceforge.net>
	
	* In SoundSystem init() driver can be given